# carumba

./: .formatter.exs  .gitignore  .iex.exs  .tool-versions  README.md  docker-compose.yml  mix.exs
assets/: tailwind.config.js
assets/css/: app.css
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: carumba.ex  carumba_jexl.ex  carumba_web.ex  jexl_test.ex
lib/carumba/: application.ex  carumba_form.ex  jexl_parser.ex  mailer.ex  repo.ex
lib/carumba/carumba_form/: answer.ex  document.ex  document_validation.ex  fieldset.ex  form.ex  form_question.ex  question.ex
lib/carumba/types/: field.ex  fieldset.ex
lib/carumba_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/carumba_web/carumba_form/: fieldset_helpers.ex
lib/carumba_web/components/: core_components.ex  layouts.ex
lib/carumba_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
lib/carumba_web/live/: document_live.ex  document_live_four.ex  document_live_three.ex  document_live_two.ex
native/carumba_jexl/: Cargo.toml  README.md
native/carumba_jexl/src/: lib.rs
priv/repo/: seeds.exs
priv/repo/migrations/: 20240724204224_install_ash-functions_extension_4.exs  20240724204226_initial_setup.exs  20240724211915_add_answers.exs  20240801080227_install_2_extensions.exs  20240801080229_add_is_required_to_question.exs  20240801084522_create_documents.exs  20240802105702_update_question_fields_and_add_configuration.exs  20240804065650_alter_value_from_string_to_map.exs  (+9 more)
test/: test_helper.exs
test/support/: conn_case.ex  data_case.ex  factory.ex
(+47 files in other folders)
