[package]
name = "carumba_jexl"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "carumba_jexl"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "^0.34", features = ["nif_version_2_17"] }
jexl-parser = "0.2.1"
jexl-eval = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"